# pyrovider

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.tests.yml
pyrovider/: __init__.py
pyrovider/meta/: construction.py  ioc.py
pyrovider/meta/tests/: test_ioc.py
pyrovider/services/: factories.py  provider.py
pyrovider/services/tests/: mocks.py  test_provider.py  test_selector_provider.py
pyrovider/services/tests/test_provider/: service_conf.yaml
pyrovider/tools/: dicttools.py
tests/: test_construction.py  test_dicttools.py  test_factories.py  test_ioc.py  test_namespaces.py  test_provider.py  test_service_provider_from_yaml.py
tests/data/: service_conf.yaml  service_conf_2.yaml  service_conf_with_namespaces.yaml
