[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrovider"
description = "A service provider for Python inspired by Symfony 2 and Angular 2"
authors = [
    { name = "Javier Lorenzana", email = "skqr@protonmail.com" },
    { name = "Sebastián Packmann", email = "seba@shiphero.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["service", "provider", "python"]
dependencies = [
 "pyyaml",
 "python-dotenv",
 "werkzeug",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyrovider.__version__"}

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.9",
    "types-pyyaml>=6.0.12.20241230",
]

[project.urls]
Homepage = "https://github.com/shiphero/pyrovider"

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[tool.ruff]
target-version = "py38"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "C",
    "UP",
    "RUF",
    "T10",
    "ISC",
    "SIM",
    "ASYNC",
    "B006",
    "B007",
    "B009",
    "B010",
    "B018"
]

ignore = ["ISC001"]

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["pyrovider/"]
